President by State csv file generation
CSV contains the formatted name and the candidate's id

--- a/president_state.ipynb
+++ b/president_state.ipynb
@@ -257,50 +257,50 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NEWMAN, JOSEPH WESTLEY</td>\n",
-       "      <td>UNKNOWN</td>\n",
-       "      <td>1988</td>\n",
-       "      <td>P80001563</td>\n",
+       "      <td>LAZ-HIRSCH, JESSE</td>\n",
+       "      <td>WRITE-IN</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>P00008276</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>MERCER, RUPERT LEWIS (BOB)</td>\n",
-       "      <td>UNKNOWN</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>P20000188</td>\n",
+       "      <td>FIELDER, RODNEY RAY</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>P00004853</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>HENKE, PHILIP</td>\n",
-       "      <td>DEMOCRATIC PARTY</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>P00004978</td>\n",
+       "      <td>FIELDER, RODNEY RAY</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>P00004853</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>WAYNE, WALTER MR.</td>\n",
-       "      <td>NONE</td>\n",
+       "      <td>GOLD, JARET SAMUEL</td>\n",
+       "      <td>WRITE-IN</td>\n",
        "      <td>2016</td>\n",
-       "      <td>P60021425</td>\n",
+       "      <td>P60022282</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>STONE, DR DAMIAN</td>\n",
-       "      <td>INDEPENDENT</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>P20004503</td>\n",
+       "      <td>ELLINGER, MICHAEL A</td>\n",
+       "      <td>DEMOCRATIC PARTY</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>P00010967</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         name             party  year candidate_id\n",
-       "0      NEWMAN, JOSEPH WESTLEY           UNKNOWN  1988    P80001563\n",
-       "1  MERCER, RUPERT LEWIS (BOB)           UNKNOWN  1992    P20000188\n",
-       "2               HENKE, PHILIP  DEMOCRATIC PARTY  2020    P00004978\n",
-       "3           WAYNE, WALTER MR.              NONE  2016    P60021425\n",
-       "4            STONE, DR DAMIAN       INDEPENDENT  2012    P20004503"
+       "                  name             party  year candidate_id\n",
+       "0    LAZ-HIRSCH, JESSE          WRITE-IN  2020    P00008276\n",
+       "1  FIELDER, RODNEY RAY              NONE  2010    P00004853\n",
+       "2  FIELDER, RODNEY RAY              NONE  2012    P00004853\n",
+       "3   GOLD, JARET SAMUEL          WRITE-IN  2016    P60022282\n",
+       "4  ELLINGER, MICHAEL A  DEMOCRATIC PARTY  2020    P00010967"
       ]
      },
      "execution_count": 7,
@@ -581,8 +581,8 @@
    "outputs": [],
    "source": [
     "id_list=[]\n",
-    "for i in president['candidate']:\n",
-    "    t=i.replace('.','').replace('\\\\','').replace('\"','').replace(',','').lower()\n",
+    "for i in president['candidate'].values:\n",
+    "    t=i.replace('\\\\','').replace('\"','').replace(',','').lower()\n",
     "    if t in ['blank vote','other','unavailable']:\n",
     "        id_list.append(\"P99999999\")\n",
     "    elif t in final_compare:\n",
@@ -832,6 +832,26 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hm[modify('TRUMP, DONALD').lower()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -871,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1047,7 @@
        "4    P60001393  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,41 +1073,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "president['party']=[i.title() for i in president['party'].values]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>state</th>\n",
+       "      <th>state_po</th>\n",
+       "      <th>state_fips</th>\n",
+       "      <th>office</th>\n",
+       "      <th>candidate</th>\n",
+       "      <th>party</th>\n",
+       "      <th>writein</th>\n",
+       "      <th>candidatevotes</th>\n",
+       "      <th>totalvotes</th>\n",
+       "      <th>version</th>\n",
+       "      <th>candidate_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>04000US01</td>\n",
+       "      <td>US President</td>\n",
+       "      <td>Jimmy Carter</td>\n",
+       "      <td>Democrat</td>\n",
+       "      <td>False</td>\n",
+       "      <td>659170</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>20171015</td>\n",
+       "      <td>P60000247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>04000US01</td>\n",
+       "      <td>US President</td>\n",
+       "      <td>Gerald R Ford</td>\n",
+       "      <td>Republican</td>\n",
+       "      <td>False</td>\n",
+       "      <td>504070</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>20171015</td>\n",
+       "      <td>P60000338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>04000US01</td>\n",
+       "      <td>US President</td>\n",
+       "      <td>Lester Garfield Maddox</td>\n",
+       "      <td>American Independent Party</td>\n",
+       "      <td>False</td>\n",
+       "      <td>9198</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>20171015</td>\n",
+       "      <td>P60002375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>04000US01</td>\n",
+       "      <td>US President</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Prohibition</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6669</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>20171015</td>\n",
+       "      <td>P99999999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>04000US01</td>\n",
+       "      <td>US President</td>\n",
+       "      <td>Gus Hall</td>\n",
+       "      <td>Communist Party Use</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1954</td>\n",
+       "      <td>1182850</td>\n",
+       "      <td>20171015</td>\n",
+       "      <td>P60001393</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "candidate               party      \n",
-       "Hillary Rodham Clinton  democrat       59.050065\n",
-       "Donald Trump            republican     32.286203\n",
-       "Gary Johnson            libertarian     4.084798\n",
-       "Blank Vote              Unavailable     1.591531\n",
-       "Other                   Other           1.576822\n",
-       "Jill Stein              green           1.410581\n",
-       "Name: candidatevotes, dtype: float64"
+       "   year    state state_po state_fips        office               candidate  \\\n",
+       "0  1976  Alabama       AL  04000US01  US President            Jimmy Carter   \n",
+       "1  1976  Alabama       AL  04000US01  US President           Gerald R Ford   \n",
+       "2  1976  Alabama       AL  04000US01  US President  Lester Garfield Maddox   \n",
+       "3  1976  Alabama       AL  04000US01  US President                   Other   \n",
+       "4  1976  Alabama       AL  04000US01  US President                Gus Hall   \n",
+       "\n",
+       "                        party writein candidatevotes totalvotes   version  \\\n",
+       "0                    Democrat   False         659170    1182850  20171015   \n",
+       "1                  Republican   False         504070    1182850  20171015   \n",
+       "2  American Independent Party   False           9198    1182850  20171015   \n",
+       "3                 Prohibition   False           6669    1182850  20171015   \n",
+       "4         Communist Party Use   False           1954    1182850  20171015   \n",
+       "\n",
+       "  candidate_id  \n",
+       "0    P60000247  \n",
+       "1    P60000338  \n",
+       "2    P60002375  \n",
+       "3    P99999999  \n",
+       "4    P60001393  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp=president[(president[\"year\"]==2016)&(president['state_po']==\"MA\")]\n",
-    "# temp=president[(president[\"year\"]==2016)]\n",
+    "president.loc[(president['candidate_id']==\"P99999999\"),'candidate']=\"Other\"\n",
+    "president.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "candidate\n",
+       "Donald J. Trump             49.021941\n",
+       "Hillary Rodham Clinton      47.823316\n",
+       "Gary Johnson                 2.197900\n",
+       "Jill Stein                   0.683638\n",
+       "Darrell Lane Castle          0.174893\n",
+       "Roque Rocky De La Fuente     0.096687\n",
+       "Other                        0.001624\n",
+       "Name: candidatevotes, dtype: float64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp=president[(president[\"year\"]==2016)&(president['state_po']==\"FL\")]\n",
+    "# temp=president[(president[\"year\"]==2000)]\n",
     "# temp.groupby([\"candidate\"])[\"totalvotes\"].sum()\n",
     "# j=temp['party'].unique()\n",
     "x=temp['candidatevotes'].sum()\n",
-    "j=((temp.groupby([\"candidate\",\"party\"])['candidatevotes'].sum()/x)*100).sort_values(ascending=False)\n",
+    "j=((temp.groupby([\"candidate\"])['candidatevotes'].sum()/x)*100).sort_values(ascending=False)\n",
     "# print(x)\n",
     "j"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
